--- a/node-essentials/node-dependencies/5-exercise-dependency/package.json
+++ b/node-essentials/node-dependencies/5-exercise-dependency/package.json
@@ -1,12 +1,15 @@
 {
   "name": "5-exercise-dependency",
   "version": "1.0.0",
-  "description": "",
   "main": "address-parser.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": "",
+  "devDependencies": {
+    "jest": "^28.1.0"
+  }
 }
